--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">ConcentrationGame</string>
+    <string name="start_game">START GAME</string>
+    <string name="credits">CREDITS</string>
+    <string name="highscores">HIGHSCORES</string>
+    <string name="team_storm">Team Storm</string>
+    <string name="concentration">Concentration</string>
 </resources>
