Edited format on MainActivity screen, added activities for game, highscore, and credits, and implemented onClickListeners for each button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="highscores">HIGHSCORES</string>
     <string name="team_storm">Team Storm</string>
     <string name="concentration">Concentration</string>
+    <string name="high_scores">High Scores</string>
 </resources>
