Added settings button and settings screen and added landscape mode to main activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="team_storm">Team Storm</string>
     <string name="concentration">Concentration</string>
     <string name="high_scores">High Scores</string>
+    <string name="settings">Settings</string>
 </resources>
