--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,11 @@
     <string name="concentration">Concentration</string>
     <string name="high_scores">High Scores</string>
     <string name="settings">Settings</string>
+    <string name="high_score_1">High Score #1</string>
+    <string name="high_score_2">High Score #2</string>
+    <string name="high_score_3">High Score #3</string>
+    <string name="save_test_scores">Save Test Scores</string>
+    <string name="load_test_scores">Load Test Scores</string>
+    <string name="load_scores">Load Scores</string>
+    <string name="enter_amount_of_tiles_4_20">enter amount of tiles (4-20)</string>
 </resources>
