--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="creditName3">Owen Lovett (014846715)</string>
     <string name="creditName4">Timmy Lin (015073799)</string>
     <string name="creditName1">Scott Lee (013762138)</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
