--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,7 @@
     <string name="creditName1">Scott Lee (013762138)</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="try_again">Try again</string>
+    <string name="end_game">End game</string>
+    <string name="new_game">New game</string>
 </resources>
